Add translations for home page

--- a/public/locales/de/home-page.json
+++ b/public/locales/de/home-page.json
@@ -1,5 +1,5 @@
 {
-  "card": {
-    "content": "Balancesheet with id {{id}}"
-  }
+  "Balance sheet with id {{id}}": "Bilanz mit id {{id}}",
+  "Balance sheet {{idToDelete}} successfully deleted": "Bilanz {{idToDelete}} erfolgreich gelöscht",
+  "Deletion of balance sheet {{idToDelete}} fails": "Löschung der Bilanz {{idToDelete}} ist fehlgeschlagen"
 }
