Add translations and language picker

--- a/public/locales/de/home-page.json
+++ b/public/locales/de/home-page.json
@@ -1,5 +1,7 @@
 {
-  "Balance sheet with id {{id}}": "Bilanz mit id {{id}}",
   "Balance sheet {{idToDelete}} successfully deleted": "Bilanz {{idToDelete}} erfolgreich gelöscht",
-  "Deletion of balance sheet {{idToDelete}} fails": "Löschung der Bilanz {{idToDelete}} ist fehlgeschlagen"
+  "Deletion of balance sheet {{idToDelete}} fails": "Löschung der Bilanz {{idToDelete}} ist fehlgeschlagen",
+  "Balance sheet with id {{id}}": "Bilanz mit id {{id}}",
+  "Edit": "Bearbeiten",
+  "Delete": "Löschen"
 }
