--- a/public/locales/en/home-page.json
+++ b/public/locales/en/home-page.json
@@ -1,5 +1,7 @@
 {
-  "Balance sheet with id {{id}}": "Balance sheet with id {{id}}",
   "Balance sheet {{idToDelete}} successfully deleted": "Balance sheet {{idToDelete}} successfully deleted",
-  "Deletion of balance sheet {{idToDelete}} fails": "Deletion of balance sheet {{idToDelete}} fails"
+  "Deletion of balance sheet {{idToDelete}} fails": "Deletion of balance sheet {{idToDelete}} fails",
+  "Balance sheet with id {{id}}": "Balance sheet with id {{id}}",
+  "Edit": "Edit",
+  "Delete": "Delete"
 }
