--- a/public/locales/de/sidebar.json
+++ b/public/locales/de/sidebar.json
@@ -1,5 +1,7 @@
 {
   "ECG Calculator": "GWÖ Rechner",
   "Overview": "Überblick",
-  "Balance sheets": "Bilanzen"
+  "Balance sheets": "Bilanzen",
+  "Active Balance Sheet": "Aktive Bilanz",
+  "Company Facts": "Fakten zum Unternehmen"
 }
