--- a/public/locales/en/sidebar.json
+++ b/public/locales/en/sidebar.json
@@ -1,5 +1,7 @@
 {
   "ECG Calculator": "ECG Calculator",
   "Overview": "Overview",
-  "Balance sheets": "Balance sheets"
+  "Balance sheets": "Balance sheets",
+  "Active Balance Sheet": "Active Balance Sheet",
+  "Company Facts": "Company Facts"
 }
