Move ZodSchema from form to dataTransferObjects

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -2,10 +2,18 @@
   "Balance sheet {{id}}": "Bilanz {{id}}",
   "Company Facts": "Fakten zum Unternehmen",
   "Ratings": "Selbsteinschätzung",
+  "Suppliers": "Suppliers",
+  "Financial service providers": "Financial service providers",
+  "Employees": "Employees",
+  "Customers and other companies": "Customers and other companies",
+  "Social environment": "Social environment",
   "Delete": "Löschen",
+  "Total purchases from suppliers": "Gesamt-Ausgaben an Lieferanten",
   "Save": "Speichern",
   "Edit": "Bearbeiten",
   "Modifications saved": "Änderungen gespeichert",
+  "Number expected": "Zahl erwartet",
+  "Number should be positive": "Zahl sollte positiv sein",
   "Balance sheet": "Bilanz",
   "Login failed": "Login fehlgeschlagen",
   "ECG Calculator": "GWÖ Rechner",
