--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,10 +2,18 @@
   "Balance sheet {{id}}": "Balance sheet {{id}}",
   "Company Facts": "Company Facts",
   "Ratings": "Ratings",
+  "Suppliers": "Suppliers",
+  "Financial service providers": "Financial service providers",
+  "Employees": "Employees",
+  "Customers and other companies": "Customers and other companies",
+  "Social environment": "Social environment",
   "Delete": "Delete",
+  "Total purchases from suppliers": "Total purchases from suppliers",
   "Save": "Save",
   "Edit": "Edit",
   "Modifications saved": "Modifications saved",
+  "Number expected": "Number expected",
+  "Number should be positive": "Number should be positive",
   "Balance sheet": "Balance sheet",
   "Login failed": "Login failed",
   "ECG Calculator": "ECG Calculator",
