--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -19,5 +19,6 @@
   "ECG Calculator": "GWÖ Rechner",
   "Create balance sheet": "Bilanz erstellen",
   "Number expected": "Zahl erwartet",
-  "Number should be positive": "Zahl sollte positiv sein"
+  "Number should be positive": "Zahl sollte positiv sein",
+  "Choose a region": "Wählen Sie eine Region"
 }
