--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,5 +19,6 @@
   "ECG Calculator": "ECG Calculator",
   "Create balance sheet": "Create balance sheet",
   "Number expected": "Number expected",
-  "Number should be positive": "Number should be positive"
+  "Number should be positive": "Number should be positive",
+  "Choose a region": "Choose a region"
 }
